build: precompile javascript with babel
Removes the in-browser Babel transformer and implements a proper build process to precompile the JavaScript for production.

This change addresses the warning about using the in-browser Babel transformer and improves the application's performance and maintainability.

The following changes are included:
- Babel dependencies are added to `package.json`.
- A `babel.config.json` file is created to configure Babel.
- The inline React script is moved from `index.html` to `src/app.js`.
- The `package.json` build scripts are updated to include a JavaScript build step.
- `index.html` is updated to remove the Babel CDN and link to the compiled script.
- `tailwind.config.js` is updated to scan the new JavaScript file.
- `README.md` is updated to reflect the new build process.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple, self-contained web application for tracking your GeForce NOW (GFN) usage. This tool helps you manage your gaming hours, calculate daily usage budgets, and estimate your monthly costs. It's designed as a Progressive Web App (PWA), so you can save it to your home screen for easy access.",
   "main": "sw.js",
   "scripts": {
-    "build": "tailwindcss -i ./src/input.css -o ./dist/output.css",
+    "build": "npm run build:css && npm run build:js",
+    "build:css": "tailwindcss -i ./src/input.css -o ./dist/output.css",
+    "build:js": "babel src/app.js -o dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +21,10 @@
   },
   "homepage": "https://github.com/Skylark95/gfn-tracker#readme",
   "devDependencies": {
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
     "tailwindcss": "^3.4.1"
   }
 }
