feat: Introduce Vite build system and modernize project setup
This commit introduces a Vite-based build system to the project, replacing the previous manual and CDN-based dependency management. This significantly modernizes the development workflow, enabling faster development with HMR and optimized production builds.

Key changes include:

- **Build System:** Integrated Vite for development server, HMR, and production bundling.
- **Dependency Management:** Switched to npm for managing all dependencies, removing CDN links.
- **File Structure:**
    - `src/app.js` renamed to `src/App.jsx` and updated to use ES module imports and React components from `lucide-react`.
    - Inline PWA manifest and icon extracted to `public/manifest.json` and `public/icon.svg`.
    - `index.html` updated as a Vite entry point.
- **Configuration:**
    - `package.json` updated with Vite scripts (`dev`, `build`, `preview`).
    - `vite.config.js` created for Vite configuration.
    - `postcss.config.js` and `tailwind.config.js` updated for proper CSS processing.
    - `.vscode/tasks.json` updated to support new Vite commands.
- **Cleanup:** Removed redundant `babel.config.json` and uninstalled Babel dependencies.
- **Documentation:** Updated `GEMINI.md` and `README.md` to reflect the new project setup, build process, and development conventions.
- **License:** Corrected license field in `package.json` to MIT.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,14 +2,49 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Run GFN Tracker",
+            "label": "Run GFN Tracker (Dev)",
             "type": "shell",
-            "command": "python3 -m http.server 8000",
+            "command": "npm run dev",
             "problemMatcher": [],
             "isBackground": true,
             "group": {
                 "kind": "build",
                 "isDefault": true
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            },
+            "options": {
+                "cwd": "${workspaceFolder}"
+            }
+        },
+        {
+            "label": "Build GFN Tracker",
+            "type": "shell",
+            "command": "npm run build",
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            },
+            "options": {
+                "cwd": "${workspaceFolder}"
+            }
+        },
+        {
+            "label": "Preview GFN Tracker",
+            "type": "shell",
+            "command": "npm run preview",
+            "problemMatcher": [],
+            "isBackground": true,
+            "group": {
+                "kind": "build",
+                "isDefault": false
             },
             "presentation": {
                 "reveal": "always",
