--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A simple, self-contained web application for tracking your GeForce NOW (GFN) usage. This tool helps you manage your gaming hours, calculate daily usage budgets, and estimate your monthly costs. It's designed as a Progressive Web App (PWA), so you can save it to your home screen for easy access.",
   "main": "sw.js",
   "scripts": {
-    "build": "npm run build:css && npm run build:js",
-    "build:css": "tailwindcss -i ./src/input.css -o ./dist/output.css",
-    "build:js": "babel src/app.js -o dist/app.js",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,16 +15,20 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Skylark95/gfn-tracker/issues"
   },
   "homepage": "https://github.com/Skylark95/gfn-tracker#readme",
   "devDependencies": {
-    "@babel/cli": "^7.28.3",
-    "@babel/core": "^7.28.5",
-    "@babel/preset-env": "^7.28.5",
-    "@babel/preset-react": "^7.28.5",
-    "tailwindcss": "^3.4.1"
+    "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.22",
+    "tailwindcss": "^3.4.1",
+    "vite": "^7.2.6"
+  },
+  "dependencies": {
+    "lucide-react": "^0.555.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
