--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,19 +21,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 24
-          cache: 'npm'
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v1
       - name: Install dependencies
-        run: npm install
+        run: bun install
       - name: Lint
-        run: npm run lint
+        run: bun run lint
       - name: Test
-        run: npm test
+        run: bun test
       - name: Build
-        run: npm run build
+        run: bun run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
